--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -13,7 +13,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  tests:
 
     runs-on: ubuntu-latest
 
@@ -27,6 +27,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install websocket-client
+        curl -sSf https://install.surrealdb.com | sh
+        surreal version
     - name: Test with unittest
       run: |
         python -m unittest discover -s tests/unit_tests
