--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -32,3 +32,7 @@ jobs:
     - name: Test with unittest
       run: |
         python -m unittest discover -s tests/unit_tests
+    - name: Test with real db and integration tests
+      run: |
+        sh ./tests/up_db.sh &
+        python -m unittest discover -s tests/integration_tests
