minor try 4 to run integrations on github

--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -35,4 +35,5 @@ jobs:
     - name: Test with real db and integration tests
       run: |
         sh ./tests/up_db.sh &
+        sleep 3
         python -m unittest discover -s tests/integration_tests
