big refactoring and renaming cause move o PyPi

--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -31,7 +31,7 @@ jobs:
         surreal version
     - name: Lint
       run: |
-        python -m pylint --rcfile pylint.toml py_surreal
+        python -m pylint --rcfile pylint.toml src/surrealist
     - name: Unit-tests
       run: |
         python -m unittest discover -s tests/unit_tests
