--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Integration tests with real DB
       run: |
         sh ./tests/up_db.sh &
-        sleep 3
+        sleep 1
         python -m unittest discover -s tests/integration_tests
   check_versions:
     runs-on: ubuntu-latest
@@ -56,11 +56,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install websocket-client pylint
+          pip install websocket-client
           curl -sSf https://install.surrealdb.com | sh
           surreal version
       - name: All tests
         run: |
           sh ./tests/up_db.sh &
-          sleep 3
+          sleep 1
           python -m unittest discover -s tests
