--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "surrealist"
-version = "0.2.4"
+version = "0.2.5"
 description = "Python client for SurrealDB, latest SurrealDB version compatible, all features supported"
 readme = "README.md"
 authors = [{ name = "kotolex", email = "farofwell@gmail.com" }]
@@ -18,7 +18,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
 ]
-keywords = ["surreal", "Surreal", "SurrealDB", "surrealist", "database"]
+keywords = ["surreal", "python", "Surreal", "SurrealDB", "surrealist", "database"]
 dependencies = [
     "websocket-client",
 ]
