--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -19,6 +19,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Start SurrealDB
+      uses: surrealdb/setup-surreal@v1
+      with:
+        surrealdb_version: latest
+        surrealdb_port: 8000
+        surrealdb_username: root
+        surrealdb_password: root
+        surrealdb_auth: true
     - name: Set up Python 3.8
       uses: actions/setup-python@v3
       with:
@@ -27,8 +35,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install websocket-client pylint
-        curl -sSf https://install.surrealdb.com | sh
-        surreal version
     - name: Lint
       run: |
         python -m pylint --rcfile pylint.toml src/surrealist
@@ -37,8 +43,6 @@ jobs:
         python -m unittest discover -s tests/unit_tests
     - name: Integration tests with real DB
       run: |
-        sh ./tests/up_db.sh &
-        sleep 1
         python -m unittest discover -s tests/integration_tests
   check_versions:
     runs-on: ubuntu-latest
@@ -49,6 +53,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Start SurrealDB
+        uses: surrealdb/setup-surreal@v1
+        with:
+          surrealdb_version: latest
+          surrealdb_port: 8000
+          surrealdb_username: root
+          surrealdb_password: root
+          surrealdb_auth: true
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
@@ -57,10 +69,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install websocket-client
-          curl -sSf https://install.surrealdb.com | sh
-          surreal version
       - name: All tests
         run: |
-          sh ./tests/up_db.sh &
-          sleep 1
           python -m unittest discover -s tests
