--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -27,6 +27,7 @@ jobs:
         surrealdb_username: root
         surrealdb_password: root
         surrealdb_auth: true
+        surrealdb_additional_args: --allow-net
     - name: Set up Python 3.8
       uses: actions/setup-python@v3
       with:
@@ -61,6 +62,7 @@ jobs:
           surrealdb_username: root
           surrealdb_password: root
           surrealdb_auth: true
+          surrealdb_additional_args: --allow-net
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
